--- a/w5/index.html
+++ b/w5/index.html
@@ -8,6 +8,27 @@
   </head>
   <body>
     <h2>5주차</h2>
+    <h2>화요일 수업</h2>
+    <ul>
+      <li><a href="tuesday/stp1.html">stp1</a></li>
+      <li><a href="tuesday/stp2.html">stp2</a></li>
+      <li><a href="tuesday/stp3.html">stp3</a></li>
+    </ul>
+    <h2>영상의 html들</h2>
+    <ul>
+      <li>
+        <a href="wrapUp/objective1.html">objective1</a>
+        <ul>
+          <li><a href="wrapUp/stp1.html">stp1</a></li>
+          <li><a href="wrapUp/stp2.html">stp2</a></li>
+          <li><a href="wrapUp/stp3.html">stp3</a></li>
+          <li><a href="wrapUp/stp4.html">stp4</a></li>
+          <li><a href="wrapUp/stp5.html">stp5</a></li>
+        </ul>
+      </li>
+      <li><a href="wrapUp/objective2.html">objective1</a></li>
+      <li><a href="wrapUp/objective3.html">objective1</a></li>
+    </ul>
     <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
