--- a/w6/index.html
+++ b/w6/index.html
@@ -2,12 +2,36 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=, initial-scale=1.0"
+    />
     <title>Document</title>
   </head>
   <body>
     <h2>6주차</h2>
+    <h2>화요일</h2>
+    <ul>
+      <li>
+        <a href="tuesday/stp1.html">stp1</a>
+      </li>
+      <li>
+        <a href="tuesday/stp2.html">stp2</a>
+      </li>
+      <li>
+        <a href="tuesday/stp3.html">stp3</a>
+      </li>
+      <li>
+        <a href="tuesday/stp4.html">stp4</a>
+      </li>
+      <li>
+        <a href="tuesday/stp5.html">stp5</a>
+      </li>
+    </ul>
     <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
