--- a/w4/index.html
+++ b/w4/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <h2>4주차</h2>
+  </ul>
+  <h2>영상의 html들</h2>
+  <ul>
+    <li><a href="wrapUp/stp1.html">stp1</a></li>
+    <li><a href="wrapUp/stp2.html">stp2</a></li>
+    <li><a href="wrapUp/stp3.html">stp3</a></li>
+    <li><a href="wrapUp/stp4.html">stp4</a></li>
+    <li><a href="wrapUp/stp5.html">stp5</a></li>
+  </ul>
     <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
