--- a/w6/index.html
+++ b/w6/index.html
@@ -32,6 +32,36 @@
         <a href="tuesday/stp5.html">stp5</a>
       </li>
     </ul>
+    <h2>영상의 html들</h2>
+    <ul>
+      <li>
+        <a
+          href="wrapUp/objective1/objective1.html"
+          >objective1</a
+        >
+      </li>
+      <li>
+        <a href="wrapUp/stp1/stp1.html">stp1</a>
+      </li>
+      <li>
+        <a href="wrapUp/stp2/stp2.html">stp2</a>
+      </li>
+      <li>
+        <a href="wrapUp/stp3/stp3.html">stp3</a>
+      </li>
+      <li>
+        <a href="wrapUp/stp4/stp4.html">stp4</a>
+      </li>
+      <li>
+        <a href="wrapUp/stp5/stp5.html">stp5</a>
+      </li>
+      <li>
+        <a href="wrapUp/stp6/stp6.html">stp6</a>
+      </li>
+      <li>
+        <a href="wrapUp/stp7/stp7.html">stp7</a>
+      </li>
+    </ul>
     <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
