--- a/w8/index.html
+++ b/w8/index.html
@@ -2,12 +2,30 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=, initial-scale=1.0"
+    />
     <title>Document</title>
   </head>
   <body>
     <h2>8주차</h2>
+    <ul>
+      <!-- <li> -->
+      <!-- <a href="project/project1.html" -->
+      <!-- >project</a -->
+      <!-- > -->
+      <!-- </li> -->
+      <li>
+        <a href="project2/project2.html"
+          >project</a
+        >
+      </li>
+    </ul>
     <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
