--- a/w8/project2/project2.html
+++ b/w8/project2/project2.html
@@ -57,7 +57,7 @@
           <div class="main__text">
             <h2>임지은</h2>
             <p>
-              안녕하세요 <Br>다양한 경험을 즐기고 도전해나가는 디자이너 입니다.</Br>
+              "안녕하세요! <Br>다양한 경험을 즐기고 도전해나가는 디자이너 입니다."</Br>
             </p>
             <div
               class="main__text__buttonWrapper"
