--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -18,6 +24,8 @@
       <li><a href="w6/index.html">6주차</a></li>
       <li><a href="w7/index.html">7주차</a></li>
       <li><a href="w8/index.html">8주차</a></li>
+      <li><a href="w9/index.html">9주차</a></li>
+      <li><a href="w10/index.html">10주차</a></li>
     </ul>
   </body>
 </html>
