--- a/w8/index.html
+++ b/w8/index.html
@@ -20,6 +20,28 @@
       <!-- >project</a -->
       <!-- > -->
       <!-- </li> -->
+      <h2>화요일 수업</h2>
+      <!-- ul>(a[href="tue/stp$/index.html"]>li>{stp$})*2 -->
+      <!-- ul>(li>a[href="tue/stp$/index.html"]>{stp$})*2  -->
+      <ul>
+        <a href="tue/stp1/index.html">
+          <li>stp1</li>
+        </a>
+        <a href="tue/stp2/index.html">
+          <li>stp2</li>
+        </a>
+      </ul>
+      <h2>8주차 녹강</h2>
+      <a href="warpUp/object1/index.html">
+        <li>object1</li></a
+      >
+      <a href="warpUp/object2/index.html">
+        <li>object2</li></a
+      >
+      <a href="warpUp/object3/index.html">
+        <li>object3</li></a
+      >
+      <h2>중간 프로젝트</h2>
       <li>
         <a href="project2/project2.html"
           >project</a
