--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <li><a href="w11/index.html">11주차</a></li>
       <li><a href="w12/index.html">12주차</a></li>
       <li><a href="w13/index.html">13주차</a></li>
+      <li><a href="w14/index.html">14주차</a></li>
+      <li>
+        <a href="w16/index.html">16주차_기말</a>
+      </li>
     </ul>
   </body>
 </html>
