--- a/w16/index.html
+++ b/w16/index.html
@@ -12,10 +12,11 @@
     <h2>기말 프로젝트</h2>
     <ul>
       <li>
-        <a href="project/final2/index.html"
+        <a href="project/final/index.html"
           >finalProject</a
         >
       </li>
     </ul>
+    <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
