--- a/w12/index.html
+++ b/w12/index.html
@@ -21,9 +21,6 @@
       <li>
         <a href="tue/stp2/stp2.html">stp2</a>
       </li>
-      <li>
-        <a href="tue/stp3/stp3.html">stp3</a>
-      </li>
     </ul>
     <h2>WrapUp</h2>
     <ul>
@@ -34,5 +31,6 @@
         </li>
       </ul>
     </ul>
+    <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
