--- a/w13/index.html
+++ b/w13/index.html
@@ -35,76 +35,53 @@
         <li>
           스티키 스크롤 돌아보기
           <ul>
-            <li>
-              <a
-                href="wrapUp/objective1/index.html"
-                >objective1</a
-              >
-              <ul>
-                <li>
-                  <a href="wrapUp/stp1/index.html"
-                    >stp1</a
-                  >
-                </li>
-              </ul>
-            </li>
+            <ul>
+              <li>
+                <a href="wrapUp/stp1/index.html"
+                  >stp1</a
+                >
+              </li>
+            </ul>
           </ul>
         </li>
         <li>
           버튼 누르면 자동 스크롤
           <ul>
-            <li>
-              <a
-                href="wrapUp/objective2/index.html"
-                >objective2</a
-              >
-              <ul>
-                <li>
-                  <a href="wrapUp/stp2/index.html"
-                    >stp2</a
-                  >
-                </li>
-              </ul>
-            </li>
+            <ul>
+              <li>
+                <a href="wrapUp/stp2/index.html"
+                  >stp2</a
+                >
+              </li>
+            </ul>
           </ul>
         </li>
         <li>
           스크롤하면 반응하는 버튼
           <ul>
-            <li>
-              <a
-                href="wrapUp/objective3/index.html"
-                >objective3</a
-              >
-              <ul>
-                <li>
-                  <a href="wrapUp/stp3/index.html"
-                    >stp3</a
-                  >
-                </li>
-              </ul>
-            </li>
+            <ul>
+              <li>
+                <a href="wrapUp/stp3/index.html"
+                  >stp3</a
+                >
+              </li>
+            </ul>
           </ul>
         </li>
         <li>
           종합
           <ul>
-            <li>
-              <a
-                href="wrapUp/objective4/index.html"
-                >objective4</a
-              >
-              <ul>
-                <li>
-                  <a href="wrapUp/stp4/index.html"
-                    >stp4</a
-                  >
-                </li>
-              </ul>
-            </li>
+            <ul>
+              <li>
+                <a href="wrapUp/stp4/index.html"
+                  >stp4</a
+                >
+              </li>
+            </ul>
           </ul>
         </li>
       </ol>
     </main>
+    <a href="../index.html">메인으로 돌아가기</a>
   </body>
 </html>
